# sendspin-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: lint-docs.yml  lint-rust.yml  release-plz.yml  test.yml
examples/: basic_client.rs  conformance_server.rs  controller_only.rs  minimal_test.rs  play_wav.rs  player.rs  secure_socket.rs  server_initiated_metadata.rs
src/: lib.rs  log_sampling.rs  playback.rs
src/audio/: gain.rs  mod.rs  pool.rs  sync_correction.rs  synced_player.rs  types.rs
src/audio/decode/: flac.rs  mod.rs  opus.rs  pcm.rs
src/audio/output/: cpal_output.rs  mod.rs
src/protocol/: client.rs  client_builder.rs  listener.rs  manager.rs  messages.rs  mod.rs
src/scheduler/: audio_scheduler.rs
src/server/: binary.rs  connection.rs  dial.rs  discovery.rs  group.rs  listener.rs  manager.rs  mod.rs
src/sync/: clock.rs  mod.rs  raw_clock.rs
tests/: audio_output.rs  audio_types.rs  binary_frames.rs  buffer_pool.rs  client_manager.rs  clock_sync.rs  connection_manager.rs  dial_discovery.rs  discovery.rs  flac_conformance.rs  group_sync.rs  pcm_decoder.rs  protocol_client.rs  protocol_client_builder.rs  protocol_listener.rs  protocol_messages.rs  raw_clock.rs  scheduler.rs  server_listener.rs  sync_correction.rs
tests/common/: mod.rs
tests/conformance/: README.md  compare.py  oracle_server.py  run.sh  run_against_client.py
tests/conformance/fixtures/: stimulus.pcm
tests/data/: 44k_16bit_stereo_b576.expected.raw  44k_16bit_stereo_b576.flac  48k_16bit_stereo.expected.raw  48k_16bit_stereo.flac  48k_24bit_stereo.expected.raw  48k_24bit_stereo.flac  96k_24bit_stereo.expected.raw  96k_24bit_stereo.flac  gen_fixtures.sh
tests/fixtures/: localhost.p12
