[package]
name = "sendspin"
version = "0.3.0"
edition = "2021"
authors = ["Sendspin Contributors"]
description = "Hyper-efficient Rust implementation of the Sendspin Protocol for synchronized multi-room audio streaming"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Sendspin/sendspin-rs"

[features]
default = []
native-tls = [
    "tokio-tungstenite/native-tls",
    "dep:tokio-native-tls",
    "dep:native-tls",
]

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = "0.24"
tokio-native-tls = { version = "0.3", optional = true }
native-tls = { version = "0.2", optional = true }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Utilities
log = "0.4"
uuid = { version = "1.10", features = ["v4", "serde"] }

# Audio output
cpal = "0.17"

# Concurrency
crossbeam = "0.8"

# Fast mutexes
parking_lot = "0.12"
typed-builder = "0.23.2"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
mdns-sd = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[example]]
name = "secure_socket"
required-features = ["native-tls"]
